# Momentum-Sync

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cpu_readings.txt  main.cpp  vsomeip.json
inc/: ConsoleSinkImpl.hpp  FileSinkImpl.hpp  FileTelemetrySourceImpl.hpp  ILogSink.hpp  ITelemetrySource.hpp  LogFormatter.hpp  LogManager.hpp  LogMessage.hpp  RingBuffer.hpp  SafeFile.hpp  SomeIPClient.hpp  SomeIPTelemetrySourceImpl.hpp  ThreadPool.hpp
service/: CMakeLists.txt  SomeIPServer.cpp  vsomeip.json
src/: ConsoleSinkImpl.cpp  FileSinkImpl.cpp  FileTelemetrySourceImpl.cpp  LogManager.cpp  LogMessage.cpp  SafeFile.cpp  SomeIPClient.cpp  SomeIPTelemetrySourceImpl.cpp  ThreadPool.cpp
